# bitcoin

./: CMakeLists.txt  configure.ac  libbitcoincoinselection.pc.in  ohttp-keys.list
build_msvc/libbitcoin_qt/: libbitcoin_qt.vcxproj
cmake/: bitcoincoinselection-config.cmake.in
contrib/: mock_socks5_proxy.py  test_private_broadcast_manual.sh
contrib/tx-db/: bitcoin_primitives.py  main.py  pyproject.toml
doc/: descriptors.md  multisig-tutorial.md
doc/design/: COIN_SELECTION_ARCHITECTURE.md  MEMPOOL_ARCHITECTURE.md  NET_LAYER_ARCHITECTURE.md  NET_PROCESSING_ARCHITECTURE.md  SCRIPT_INTERPRETER_ARCHITECTURE.md  VALIDATION_ARCHITECTURE.md  WALLET_ARCHITECTURE.md
src/: CMakeLists.txt  Makefile.am  Makefile.bench.include  Makefile.test.include  bech32.cpp  bech32.h  bip324.cpp  blockencodings.cpp  blockencodings.h  chainparams.cpp  chainparams.h  clientversion.cpp  compressor.cpp  compressor.h  core_io.cpp  core_io.h  deploymentinfo.cpp  dhkem_secp256k1.cpp  dhkem_secp256k1.h  exchange.h  fec.cpp  fec.h  hash.h  init.cpp  key.cpp  key.h  key_io.cpp  key_io.h  logging.cpp  logging.h  mempool_accept.cpp  mmapstorage.h  net.cpp  net.h  net_processing.cpp  net_processing.h  outoforder.cpp  outoforder.h  outputtype.cpp  outputtype.h  (+24 more)
src/bench/: CMakeLists.txt  blockstorage_prune.cpp  silentpayment.cpp  wallet_balance.cpp
src/coinselection/: CMakeLists.txt  bitcoincoinselection.cpp  bitcoincoinselection.h  bitcoincoinselection_wrapper.h
src/common/: args.cpp  args.h  config.cpp  messages.cpp
src/consensus/: params.h
src/crypto/: CMakeLists.txt  hkdf_sha256.cpp  hkdf_sha256.h  hmac_sha256.h  hpke.cpp  hpke.h  sha512_256.cpp  sha512_256.h
src/fec/: CMakeLists.txt  WirehairTools.cpp  WirehairTools.h  gf256.cpp  gf256.h  gf256_avx2.cpp  gf256_avx2.h  gf256_neon.cpp  gf256_neon.h  gf256_ssse3.cpp  gf256_ssse3.h  wirehair.cpp
src/fiber/: fec.cpp  fec.h  udpapi.h  udpnet.cpp  udpnet.h  udprelay.cpp  udprelay.h
src/index/: silentpaymentindex.cpp  silentpaymentindex.h  txospenderindex.cpp  txospenderindex.h
src/interfaces/: chain.h  mining.h
src/ipc/capnp/: mining.capnp
src/kernel/: CMakeLists.txt  bitcoinkernel.cpp  bitcoinkernel.h  bitcoinkernel_wrapper.h  chainparams.cpp  chainparams.h  coinstats.cpp
src/node/: blockstorage.cpp  blockstorage.h  caches.cpp  interfaces.cpp  transaction.cpp  txorphanage.cpp  txrelay.h
src/ohttp/: bhttp.cpp  bhttp.h  ohttp.cpp  ohttp.h
src/payjoin/: bhttp.cpp  bhttp.h  dhkem_secp256k1.cpp  messages.cpp  messages.h  net.cpp  net.h  ohttp.cpp  ohttp.h  original.cpp  original.h  psbt_sanitize.cpp  psbt_sanitize.h  receiver.cpp  receiver.h  receiver_validation.cpp  receiver_validation.h  sender.cpp  sender.h  sender_validation.cpp  sender_validation.h  session.h  shortid.cpp  shortid.h  uri.cpp  uri.h
src/policy/: policy.h
src/primitives/: transaction.cpp  transaction.h
src/qt/: CMakeLists.txt  addressinfotablemodel.cpp  addressinfotablemodel.h  addressinfoview.h  bitcoingui.cpp  rpcconsole.cpp  walletview.cpp
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  mempool.cpp  net.cpp  node.cpp  payjoin.cpp  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  register.h  udpnet.cpp  util.cpp  util.h
src/script/: descriptor.cpp  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.h  sign.cpp  sign.h  signingprovider.h  txhash.cpp  txhash.h
src/test/: CMakeLists.txt  argsman_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  coinstats_kernel_tests.cpp  compress_tests.cpp  crypto_tests.cpp  descriptor_tests.cpp  dhkem_secp256k1_tests.cpp  fec_tests.cpp  miner_tests.cpp  ohttp_tests.cpp  orphanage_tests.cpp  payjoin_messages_tests.cpp  payjoin_original_tests.cpp  payjoin_receiver_validation_tests.cpp  payjoin_sender_validation_tests.cpp  payjoin_session_tests.cpp  payjoin_shortid_tests.cpp  payjoin_uri_tests.cpp  rpc_tests.cpp  script_assets_tests.cpp  test_payjoin_directory.cpp  transaction_tests.cpp  txhash_tests.cpp  txospenderindex_tests.cpp  txvalidationcache_tests.cpp  udpmulticasttx_tests.cpp  udprelay_tests.cpp  utreexo_tests.cpp
src/test/coinselection/: CMakeLists.txt  coinselection_c_api_tests.cpp  coinselection_wrapper_tests.cpp  test_main.cpp
src/test/fuzz/: CMakeLists.txt  crypto_hkdf_hmac_sha256.cpp  rpc.cpp  script_assets_test_minimizer.cpp
src/test/kernel/: test_kernel.cpp
src/test/util/: chainstate.h  validation.cpp
src/util/: sock.cpp  sock.h
src/utreexo/: CMakeLists.txt  util.h  utreexo.cpp  utreexo.h
src/wallet/: CMakeLists.txt  codex32.cpp  codex32.h  coinselection.cpp  coinselection.h  load.cpp  payjoin.cpp  payjoin.h  receive.cpp  receive.h  scriptpubkeyman.cpp  scriptpubkeyman.h  silentpayment.cpp  silentpayment.h  spend.cpp  spend.h  transaction.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  walletutil.cpp  walletutil.h
src/wallet/rpc/: addresses.cpp  backup.cpp  coins.cpp  payjoin.cpp  spend.cpp  transactions.cpp  wallet.cpp
src/wallet/test/: CMakeLists.txt  codex32_tests.cpp  util.cpp  (+5 more)
test/functional/: feature_bind_extra.py  feature_cjdns_externalip.py  feature_txhash.py  feature_txhash_activation.py  interface_ipc_mining.py  p2p_addr_selfannouncement.py  p2p_blockfilters.py  p2p_compactblocks.py  p2p_permissions.py  p2p_private_broadcast.py  p2p_reorg_logging.py  rpc_blockchain.py  rpc_decodescript.py  rpc_dumptxoutset.py  rpc_getblockfrompeer.py  rpc_gettxoutsetinfo_race.py  rpc_help.py  rpc_mempool_info.py  test_runner.py  wallet_abandonconflict.py  wallet_ancient_migration.py  wallet_codex32.py  wallet_derivehdkey.py  wallet_gethdkeys.py  wallet_listaddresses.py  wallet_listtransactions.py  wallet_migration.py  wallet_multisig_derivehdkey.py  wallet_multiwallet.py  wallet_payjoin.py  wallet_private_broadcast.py  wallet_silentpayment.py  wallet_silentpayment_addr_reuse.py  wallet_silentpayment_blockfilterindex.py  wallet_silentpayment_identifier.py  wallet_silentpayment_labels.py  wallet_silentpayment_misc.py  wallet_silentpayment_psbt.py  wallet_silentpayment_psbt_send_many_addr.py  wallet_silentpayment_simple.py  (+3 more)
(+7 files in other folders)
